--- a/ParallelsInGeometry/1166-SupplementalProblems.tex
+++ b/ParallelsInGeometry/1166-SupplementalProblems.tex
@@ -1,9 +1,9 @@
 \newpage
 
-\section{Math 1166: Final Exam Review, Draft 2019}
+\section{Math 1166: Final Exam Review, Spring 2021}
 
 Note:  The final exam is cumulative, so be sure to include the \textbf{previous midterm review documents} as part of your review.  
-Since the second midterm, we will have covered Sections 5.3, 6.1 and 6.2 from your notes as well as Activities A.36 -- A.49, except A.38 and A.46.  Below is a summary of that content.  
+Since the third midterm, we will have covered Sections 6.1 and 6.2 from your notes as well as Activities A.41 -- A.49, except A.47.  (Some of these activities were modified for Desmos or GeoGebra.) Below is a summary of that content.  
 
 Some of the following problems (as well as a few others) will be part of an online supplementary review, available by Reading Day.  
 
@@ -18,15 +18,15 @@ Some of the following problems (as well as a few others) will be part of an onli
 % A.47. Midsets Abound (section 6.2)
 % A.48. Tenacity Paracity
 
-\subsection*{Coordinate Geometry}
-\begin{itemize}\itemsep-3pt
-\item What are the benefits of the standard form, the point-slope form, and the slope-intercept form of a line?  
-\item Find an equation of a line through a given point parallel to a given line.  (Try this in standard form.)  
-\item Find an equation of a line through a given point perpendicular to a given line.  (Try this in standard form.) 
-\item Given two lines, two circles, or a line and a circle, find their intersection(s) if any.  Describe what is happening geometrically when the algebra yields no solutions, exactly one solution, exactly two solution(s) or infinitely many solutions. 
-\item Given an equation of a circle or a parabola, complete the square to find the center of the circle or the vertex of the parabola.  
-\item What are constructible numbers?  What are some numbers that are not constructible? 
-\end{itemize}
+%\subsection*{Coordinate Geometry}
+%\begin{itemize}\itemsep-3pt
+%\item What are the benefits of the standard form, the point-slope form, and the slope-intercept form of a line?  
+%\item Find an equation of a line through a given point parallel to a given line.  (Try this in standard form.)  
+%\item Find an equation of a line through a given point perpendicular to a given line.  (Try this in standard form.) 
+%\item Given two lines, two circles, or a line and a circle, find their intersection(s) if any.  Describe what is happening geometrically when the algebra yields no solutions, exactly one solution, exactly two solution(s) or infinitely many solutions. 
+%\item Given an equation of a circle or a parabola, complete the square to find the center of the circle or the vertex of the parabola.  
+%%\item What are constructible numbers?  What are some numbers that are not constructible? 
+%\end{itemize}
 
 \subsection*{City Geometry}
 \begin{itemize}\itemsep-3pt
@@ -51,7 +51,7 @@ Some of the following problems (as well as a few others) will be part of an onli
 
 %\subsection{Parametric Equations}
 \subsection{Supplemental Review Problems}
-The problems below target content since the second midterm exam. 
+Most of the problems below target content since the third midterm exam. 
 
 \begin{prob} 
 Consider a nonzero vector defined by the ordered pair $(a,b)$. Let $m$ be the magnitude (length) of this vector, \textbf{use algebra} to explain why
@@ -191,13 +191,13 @@ Recall the method in Euclidean geometry of constructing an equilateral triangle 
 A fundamental feature of the basic rigid motions in Euclidean geometry is that they preserve distance and angle.  In city geometry, some basic rigid motions preserve both distance and angle and others fail for various reasons.  Explain.  (Hint:  Some but not all rotations preserve both distance and angle.)  
 \end{prob}
 
-\begin{prob} 
-Clearly identify which of the following numbers are constructible and
-which numbers are not constructible.
-\[
-4 \qquad  \sqrt[3]{2} \qquad3.1415926 \qquad \sqrt[3]{125} \qquad \sqrt[6]{7} \qquad \frac{6}{1+\sqrt{5}}
-\]
-\end{prob}
+%\begin{prob} 
+%Clearly identify which of the following numbers are constructible and
+%which numbers are not constructible.
+%\[
+%4 \qquad  \sqrt[3]{2} \qquad3.1415926 \qquad \sqrt[3]{125} \qquad \sqrt[6]{7} \qquad \frac{6}{1+\sqrt{5}}
+%\]
+%\end{prob}
 
 \begin{prob}
 Consider $x=(y-2)^2+3$. 
@@ -261,17 +261,17 @@ Volume of a cylinder.
 \end{prob}
 
 
-\begin{prob}
-Standard televisions usually have an aspect ratio (width:length) of 4:3.  Wide-screen televisions have an aspect ratio of 16:9.  Brad's first wide-screen television was a 36 inch (diagonal) model.  Although the new television was clearly wider than the 27 inch (diagonal) standard television it replaced, he was surprised that it did not seem taller than the old television.  Which television was actually taller or shorter?  By how much?  Explain your reasoning.   
-\end{prob}
+%\begin{prob}
+%Standard televisions usually have an aspect ratio (width:length) of 4:3.  Wide-screen televisions have an aspect ratio of 16:9.  Brad's first wide-screen television was a 36 inch (diagonal) model.  Although the new television was clearly wider than the 27 inch (diagonal) standard television it replaced, he was surprised that it did not seem taller than the old television.  Which television was actually taller or shorter?  By how much?  Explain your reasoning.   
+%\end{prob}
 
-\begin{prob}
-Given an equation of a line in standard form, $ax+by=c$:  
-\begin{enumerate}
-\item Find an efficient way to write down an equation of a perpendicular line through the point $(p,q)$.  
-\item Explain why efficient the method works. 
-\end{enumerate}
-\end{prob}
+%\begin{prob}
+%Given an equation of a line in standard form, $ax+by=c$:  
+%\begin{enumerate}
+%\item Find an efficient way to write down an equation of a perpendicular line through the point $(p,q)$.  
+%\item Explain why efficient the method works. 
+%\end{enumerate}
+%\end{prob}
 
 \begin{prob}
 Below is a figure that illustrates part of Euclid's proof of the Pythagorean Theorem.  You may assume the following: 
