--- a/ParallelsInGeometry/1166-midterm.tex
+++ b/ParallelsInGeometry/1166-midterm.tex
@@ -1,7 +1,7 @@
 \newpage
 
-\section{Midterm 1 Review, draft 02/08/19}
-Midterm Exam 1 will cover Chapters 1 -- 3 (except section 1.2 and the angle trisection part of 3.1) and activities A.1 -- A.18.  We did not complete all of these activities in class so you will need to fill in some gaps.  
+\section{Midterm 1 Review, Spring 2021}
+Midterm Exam 1 will cover Chapters 1 -- 3 (except section 1.2 and the angle trisection part of 3.1) and activities 1 -- 18, some of which are on the schedule for next week.  We did not complete all of these activities in class so you will need to fill in some gaps.  
 \subsection{Review Ideas}
 
 \begin{itemize}\itemsep0em
@@ -109,19 +109,17 @@ State and prove the Pythagorean theorem.\marginnote{What about the converse?}
 \end{prob}
 
 \begin{prob}
-Prove:  Opposite sides of a parallelogram are congruent.\marginnote{What about the converse?}
+Prove any one of the following theorems about quadrilaterals.  State the converse of the theorem (regarding quadrilaterals).  If the converse is true, prove it.  If the converse is false, give a counterexample.  
+\begin{enumerate}
+\item Opposite sides of a parallelogram are congruent.
+\item The diagonals of a rhombus are perpendicular.
+\item The diagonals of a rectangle are congruent.
+\item The diagonals of a parallelogram bisector each other.
+\end{enumerate}
 \end{prob}
 
 \begin{prob}
-Prove:  The diagonals of a rhombus are perpendicular.\marginnote{What about the converse?}
-\end{prob}
-
-\begin{prob}
-Prove:  The diagonals of a rectangle are congruent.\marginnote{What about the converse?}
-\end{prob}
-
-\begin{prob}
-Given a circle, give a construction that finds its center.  Explain why it works.  
+Given a circle, describe a construction that finds its center.  Explain why it works.  
 \end{prob}
 
 \begin{prob}
@@ -130,27 +128,27 @@ midpoints of the sides of the first quadrilateral.  You will find that the secon
 is a special quadrilateral.  Make a conjecture about the second quadrilateral and prove it.  
 \end{prob}
 
-\begin{prob}
-The following picture shows a triangle that has been folded
-  along the dotted lines:
-\[
-\includegraphics{../graphics/origamiPBPTri.pdf}
-\]
-Explain how the picture ``proves'' the following statements:
-\begin{enumerate}
-\item The interior angles of a triangle sum to $180^\circ$. 
-\item The area of a triangle is given by $bh/2$. 
-\end{enumerate}
-\end{prob}
-
-\begin{prob}
-The figure below illustrates a construction given an angle $\theta$ and a segment $\overline{AB}$.  Line $\overleftrightarrow{DE}$ is the perpendicular bisector of $\overline{AB}$, and $\overleftrightarrow{BE}$ is perpendicular to $\overrightarrow{BC}$, as marked.  
-\[
-\includegraphics[scale=0.5]{../graphics/trickyConstruction}
-\]
-\begin{enumerate}
-%\item Mark the diagram and state what must be true about the construction so that $\angle\alpha=\angle\beta$. 
-\item Prove that $\angle\theta=\angle\beta$. 
-\item What will happen to $\angle\beta$ if point $X$ is moved over to point $Y$?  Say how you know.  
-\end{enumerate}
-\end{prob}
+%\begin{prob}
+%The following picture shows a triangle that has been folded
+%  along the dotted lines:
+%\[
+%\includegraphics{../graphics/origamiPBPTri.pdf}
+%\]
+%Explain how the picture ``proves'' the following statements:
+%\begin{enumerate}
+%\item The interior angles of a triangle sum to $180^\circ$. 
+%\item The area of a triangle is given by $bh/2$. 
+%\end{enumerate}
+%\end{prob}
+%
+%\begin{prob}
+%The figure below illustrates a construction given an angle $\theta$ and a segment $\overline{AB}$.  Line $\overleftrightarrow{DE}$ is the perpendicular bisector of $\overline{AB}$, and $\overleftrightarrow{BE}$ is perpendicular to $\overrightarrow{BC}$, as marked.  
+%\[
+%\includegraphics[scale=0.5]{../graphics/trickyConstruction}
+%\]
+%\begin{enumerate}
+%%\item Mark the diagram and state what must be true about the construction so that $\angle\alpha=\angle\beta$. 
+%\item Prove that $\angle\theta=\angle\beta$. 
+%\item What will happen to $\angle\beta$ if point $X$ is moved over to point $Y$?  Say how you know.  
+%\end{enumerate}
+%\end{prob}
