--- a/ParallelsInGeometry/ParallelsInGeometrySupplements.tex
+++ b/ParallelsInGeometry/ParallelsInGeometrySupplements.tex
@@ -20,7 +20,7 @@
 
 \title{Parallels \\ in Geometry \\ (Supplements)}
 \author{\teachingnotes}
-\publisher{Math 1166:  Spring 2019 \\ This document was typeset on \today.}
+\publisher{Math 1166:  Spring 2020 \\ This document was typeset on \today.}
 %\date{}
 
 
@@ -94,6 +94,7 @@ $$\includegraphics[scale=1.2]{../graphics/sphereVolume}$$
 \chapter{Supplemental Problems}
 \input{1166-midterm}
 \input{1166-midterm2}
+\input{1166-midterm3}
 %
 \input{1166-SupplementalProblems}
 \input{4407-exam}
