--- a/ParallelsInGeometry/teacherEd.sty
+++ b/ParallelsInGeometry/teacherEd.sty
@@ -93,7 +93,7 @@
 %%% This set of code is all of our user defined commands
 \newcommand{\bysame}{\mbox{\rule{3em}{.4pt}}\,}
 \newcommand{\N}{\mathbb N}
-\renewcommand{\C}{\mathbb C}
+\newcommand{\C}{\mathbb C}
 \newcommand{\W}{\mathbb W}
 \newcommand{\Z}{\mathbb Z}
 \newcommand{\Q}{\mathbb Q}
