--- a/ParallelsInGeometry/1166-SupplementalProblems.tex
+++ b/ParallelsInGeometry/1166-SupplementalProblems.tex
@@ -1,9 +1,9 @@
 \newpage
 
-\section{Math 1166: Final Exam Review, Spring 2021}
+\section{Math 1166: Final Exam Review, Spring 2022 (draft)}
 
 Note:  The final exam is cumulative, so be sure to include the \textbf{previous midterm review documents} as part of your review.  
-Since the third midterm, we will have covered Sections 6.1 and 6.2 from your notes as well as Activities A.41 -- A.49, except A.47.  (Some of these activities were modified for Desmos or GeoGebra.) Below is a summary of that content.  
+Since the third midterm, we will have covered Sections 6.1 and 6.2 from your notes as well as Activities A.41 -- A.48, except A.44 and A.47.  (Some of these activities were modified for Desmos or GeoGebra.) Below is a summary of that content.  
 
 Some of the following problems (as well as a few others) will be part of an online supplementary review, available by Reading Day.  
 
@@ -53,38 +53,72 @@ Some of the following problems (as well as a few others) will be part of an onli
 \subsection{Supplemental Review Problems}
 Most of the problems below target content since the third midterm exam. 
 
-\begin{prob} 
-Consider a nonzero vector defined by the ordered pair $(a,b)$. Let $m$ be the magnitude (length) of this vector, \textbf{use algebra} to explain why
-\[
-\frac{(a,b)}{m}
-\]
-is a new vector whose magnitude is $1$ and whose direction is the same
-as $(a,b)$.
-\end{prob} 
 
 \begin{prob}
-Suppose you have a parametric plot defined by $x(t)$ and $y(t)$.
-\begin{enumerate}
-\item Compare and contrast the plots of
-\[
-\bigg(x(t),y(t)\bigg)\qquad\text{and}\qquad\bigg(x(t-6),y(t-6)\bigg).
-\]
-\item Suppose that there are two bugs whose positions are given by:
-\[
-\mathrm{bug}_1(t) = \bigg(x(t),y(t)\bigg)\qquad\text{and}\qquad\mathrm{bug}_2=\bigg(x(t-6),y(t-6)\bigg).
-\]
-where $t$ represents time in seconds. Describe what happens as $t$
-runs from $0$ seconds to $36$ seconds.
+Write an equation of the line through $(2,4)$ parallel to $5x-3y=1$.  
+Now write an equation of the line through $(x_1,y_1)$ parallel to $ax+by=c$. 
+\end{prob}
 
-\item Now suppose that there are two bugs whose positions are given
-  by:
-\[
-\mathrm{bug}_1(t) = \bigg(x(t),y(t)\bigg)\qquad\text{and}\qquad\mathrm{bug}_2=\bigg(x(t)-6,y(t)-6\bigg).
-\]
-where $t$ represents time in seconds. Describe what happens as $t$
-runs from $0$ seconds to $36$ seconds.
+\begin{prob}
+Write an equation of the line through $(2,4)$ perpendicular to $5x-3y=1$.  
+Now write an equation of the line through $(x_1,y_1)$ perpendicular to $ax+by=c$. 
+\end{prob}
+
+\begin{prob}
+Intersections of lines.  
+\begin{enumerate}
+%\item Find the intersection of the lines $2x-3y=4$ and $3x-5y=3$.  
+%\item Find the intersection of the lines $2x-3y=4$ and $-4x+6y=-8$.
+%\item Find the intersection of the lines $2x-3y=4$ and $-4x+6y=5$.
+\item Find the intersection of the lines $2x-3y=5$ and $x+4y=19$.  
+\item Find the intersection of the lines $2x-3y=5$ and $-4x+6y=7$.
+\item Find the intersection of the lines $2x-3y=5$ and $-4x+6y=-10$.
+\item How might you have predicted in advance how many solutions to expect for each previous system of equations?
+\item Use algebra to help explain why lines intersect in zero, one, or infinitely many points.  (You know this geometrically, of course.  Here you demonstrate how algebra gives the same result.)  Indicate clearly the algebraic conditions
+for which you get zero, one, or infinitely many points.  
 \end{enumerate}
-\end{prob} 
+\end{prob}
+
+\begin{prob}
+Suppose you have a rectangle with vertices at $(0,0)$, $(a,0)$,
+$(a,b)$ and $(0,b)$. Use algebra to prove that the diagonals have the
+same length.
+\end{prob}
+
+
+
+%\begin{prob} 
+%Consider a nonzero vector defined by the ordered pair $(a,b)$. Let $m$ be the magnitude (length) of this vector, \textbf{use algebra} to explain why
+%\[
+%\frac{(a,b)}{m}
+%\]
+%is a new vector whose magnitude is $1$ and whose direction is the same
+%as $(a,b)$.
+%\end{prob} 
+
+%\begin{prob}
+%Suppose you have a parametric plot defined by $x(t)$ and $y(t)$.
+%\begin{enumerate}
+%\item Compare and contrast the plots of
+%\[
+%\bigg(x(t),y(t)\bigg)\qquad\text{and}\qquad\bigg(x(t-6),y(t-6)\bigg).
+%\]
+%\item Suppose that there are two bugs whose positions are given by:
+%\[
+%\mathrm{bug}_1(t) = \bigg(x(t),y(t)\bigg)\qquad\text{and}\qquad\mathrm{bug}_2=\bigg(x(t-6),y(t-6)\bigg).
+%\]
+%where $t$ represents time in seconds. Describe what happens as $t$
+%runs from $0$ seconds to $36$ seconds.
+%
+%\item Now suppose that there are two bugs whose positions are given
+%  by:
+%\[
+%\mathrm{bug}_1(t) = \bigg(x(t),y(t)\bigg)\qquad\text{and}\qquad\mathrm{bug}_2=\bigg(x(t)-6,y(t)-6\bigg).
+%\]
+%where $t$ represents time in seconds. Describe what happens as $t$
+%runs from $0$ seconds to $36$ seconds.
+%\end{enumerate}
+%\end{prob} 
 
 \begin{prob}
 Find the intersection of the lines
