--- a/ParallelsInGeometry/1166-midterm.tex
+++ b/ParallelsInGeometry/1166-midterm.tex
@@ -1,7 +1,7 @@
 \newpage
 
-\section{Midterm 1 Review, Spring 2021}
-Midterm Exam 1 will cover Chapters 1 -- 3 (except section 1.2 and the angle trisection part of 3.1) and activities 1 -- 18, some of which are on the schedule for next week.  We did not complete all of these activities in class so you will need to fill in some gaps.  
+\section{Midterm 1 Review, Spring 2022}
+Midterm Exam 1 will cover Chapters 1 -- 3 (except section 1.2 and the angle trisection part of 3.1) and activities 1 -- 18, some of which are on the schedule for this week.  We did not complete all of these activities in class so you will need to fill in some gaps.  
 \subsection{Review Ideas}
 
 \begin{itemize}\itemsep0em
