Exam review updates

--- a/ParallelsInGeometry/1166-midterm2.tex
+++ b/ParallelsInGeometry/1166-midterm2.tex
@@ -1,10 +1,10 @@
 \newpage
 
-\section{Midterm 2 Review, Spring 2022}
+\section{Midterm 2 Review, Spring 2023}
 
 %Midterm 2 will cover Chapter 4, Sections 5.1 and 5.2, Activities A.19--A.35, and A.39. Here are some 
 
-Midterm 2 will cover sections 4.1 through 4.4, Activities A.19--A.32 (except A.28 and A.30) and A.39-41. Here are some specific reminders:
+Midterm 2 will cover sections 4.1 through 4.4, Activities A.21--A.34 (except A.30 and A.32) and A.41-43. Here are some specific reminders:
 \begin{itemize}\itemsep-3pt
 %\item Know the distinction between synthetic and analytic geometry.
 \item Know the basic rigid motions, what is required to specify them, and their properties. 
@@ -84,7 +84,7 @@ Some drugs work best when dosages are proportional to body surface area.  Other 
 \begin{prob}
 LeBron James is 6 ft. 8. in tall and wears a size 16 shoe.  
 \begin{enumerate}
-Bart says a 5 ft. 10 in. version of LeBron would have a foot 7/8 as long.  Does this make sense?  Explain why or why not.  If not, give a better estimate.  
+\item Bart says a 5 ft. 10 in. version of LeBron would have a foot 7/8 as long.  Does this make sense?  Explain why or why not.  If not, give a better estimate.  
 %\answer{This is fine because foot length is proportional to height.}
 \item Bart says that the scaled-down LeBron would wear size 14 shoe because 14 is 7/8 of 16.  Does this make sense?  Explain why or why not.  If not, give a better estimate of the scaled version's shoe size.  
 %\answer{This is wrong because shoe size is not proportional to foot length.  Somehow suggest that students use Internet data to create a linear function relating foot length to shoe size, and they should get a result close to size 10, which is more sensible.} 
@@ -157,18 +157,18 @@ Solve for all unknowns in the following cases.
 In each case explain your reasoning.
 \end{prob}
 
-%\begin{prob}
-%In a class activity, we established the following Parallel-Side Theorem:  If a line in a triangle is parallel to a side of a triangle, then it splits the other sides of the triangle proportionally. 
-%$$\includegraphics[scale=0.6]{../graphics/Similarity}$$
-%\begin{enumerate}
-%\item Using algebra and the Parallel-Side Theorem, you proved that $\frac{AB}{DE}$ is equal to what other ratios?  
-%%\begin{center}
-%%$\frac{AB}{DE} = \frac{AC}{DC} =\frac{BC}{EC}$
-%%\end{center}
-%\item Explain briefly how the Parallel-Side Theorem implies the AA criterion for triangle similarity.  (Hint: Be sure to use the definition of similarity in terms of basic rigid motions and dilations.)  
-%
-%\end{enumerate}
-%\end{prob}
+\begin{prob}
+In a class activity, we established the following Parallel-Side Theorem:  If a line in a triangle is parallel to a side of a triangle, then it splits the other sides of the triangle proportionally. 
+$$\includegraphics[scale=0.55]{../graphics/Similarity}$$
+\begin{enumerate}
+\item Using algebra and the Parallel-Side Theorem, you proved that $\frac{AB}{DE}$ is equal to what other ratios?  
+%\begin{center}
+%$\frac{AB}{DE} = \frac{AC}{DC} =\frac{BC}{EC}$
+%\end{center}
+\item Explain briefly how the Parallel-Side Theorem implies the AA criterion for triangle similarity.  (Hint: Be sure to use the definition of similarity in terms of basic rigid motions and dilations.)  
+
+\end{enumerate}
+\end{prob}
 
 \begin{prob}
 The Split-Side Theorem, which is the converse of the Parallel-Side Theorem, is proved in a class activity.   
@@ -200,9 +200,26 @@ The Split-Side Theorem, which is the converse of the Parallel-Side Theorem, is p
 
 \begin{prob}
 Felicia and Wesley are neighbors.  The common boundary between their properties consists of two line segments, as shown below.  
-$$\includegraphics[scale=0.38]{../graphics/TIMSS}$$
+$$\includegraphics[scale=0.35]{../graphics/TIMSS}$$
 They would prefer their common boundary to be a single straight segment.  How might they change their boundary so that they 
 each have the same area as they have now?  
+\end{prob}
+
+\begin{prob}
+Below is a figure that illustrates part of Euclid's proof of the Pythagorean Theorem.  You may assume the following: 
+\begin{itemize}
+\item All  angles that appear to be right angles are indeed right.
+\item $FB=BA$ and $BD=BC$. 
+\item $\triangle ABD \cong \triangle FBC$.  
+\end{itemize}
+\[
+\includegraphics[scale=0.23]{../graphics/Euclid_Pythagorean_theorem3.PNG}
+\]
+\begin{enumerate}
+\item Why is the area of $\triangle KBD$ (not drawn) equal to the area of $\triangle ABD$?
+\item Why is the area of $\triangle FBC$ equal to the area of $\triangle FBA$ (not drawn)?
+\item Explain briefly why the area of rectangle $KBDL$ equal to the area of rectangle $FBAG$.
+\item Now explain how to complete the proof of the Pythagorean theorem.  \end{enumerate}
 \end{prob}
 
 
@@ -229,11 +246,10 @@ Give an informal derivation of the relationship between the circumference and ar
 \begin{prob}
 Given a figure and a rotation of that figure, find the center and angle of rotation.  
 \end{prob}
-\newpage 
 
 \begin{prob}
 In the figure below  $O$ is the center of the circle, $\overline{XY}$ is a diameter, $a = PX$, $b=PY$, and $c=PZ$.  
-$$\includegraphics[scale=0.6]{../graphics/means}$$
+$$\includegraphics[scale=0.55]{../graphics/means}$$
 \begin{enumerate}
 \item Show that $c=\sqrt{ab}$.  
 \item Use the figure to explain the Arithmetic-Geometric Mean Inequality: $\frac{a+b}{2} \ge \sqrt{ab}$.  
