--- a/ParallelsInGeometry/4407-exam.tex
+++ b/ParallelsInGeometry/4407-exam.tex
@@ -1,7 +1,7 @@
 \newpage
 
 \section{Math 4407 Exam Review}
-The exam will sample from Chapters 1 -- 4 and Activities 1--32 and 38 of your course notes.  Exam problems will focus on Euclidean geometry.  In a few of the problems, you will be asked \emph{to compare the Euclidean result to spherical or hyperbolic geometry and to explain your reasoning.}  
+The exam will sample from Chapters 1 -- 4 and Activities 1--34 (except 30 and 32) and 41 of your course notes.  Exam problems will focus on Euclidean geometry.  In a few of the problems, you will be asked \emph{to compare the Euclidean result to spherical or hyperbolic geometry and to explain your reasoning.}  
 \subsection{Review Ideas}
 
 \begin{itemize}\itemsep0em
@@ -247,20 +247,38 @@ Explain how the following picture ``proves'' the Pythagorean Theorem.
 Given a figure and a rotation of that figure, find the center and angle of rotation.  
 \end{prob}
 
-%\begin{prob}
-%In the figure below  $O$ is the center of the circle, $\overline{XY}$ is a diameter, $a = PX$, $b=PY$, and $c=PZ$.  
-%$$\includegraphics[scale=0.6]{../graphics/means}$$
-%\begin{enumerate}
-%\item Show that $c=\sqrt{ab}$.  
-%\item Use the figure to explain the Arithmetic-Geometric Mean Inequality: $\frac{a+b}{2} \ge \sqrt{ab}$.  
-%%\item Why is this called the Arithmetic-Geometric Mean Inequality?  
-%\end{enumerate}
-%\end{prob}
+\begin{prob}
+Below is a figure that illustrates part of Euclid's proof of the Pythagorean Theorem.  You may assume the following: 
+\begin{itemize}
+\item All  angles that appear to be right angles are indeed right.
+\item $FB=BA$ and $BD=BC$. 
+\item $\triangle ABD \cong \triangle FBC$.  
+\end{itemize}
+\[
+\includegraphics[scale=0.25]{../graphics/Euclid_Pythagorean_theorem3.PNG}
+\]
+\begin{enumerate}
+\item Why is the area of $\triangle KBD$ (not drawn) equal to the area of $\triangle ABD$?
+\item Why is the area of $\triangle FBC$ equal to the area of $\triangle FBA$ (not drawn)?
+\item Explain briefly why the area of rectangle $KBDL$ equal to the area of rectangle $FBAG$.
+\item Now explain how to complete the proof of the Pythagorean theorem.  \end{enumerate}
+\end{prob}
 
-%\begin{prob}
-%If the perimeter of a rectangle is 20 feet, what is the most one can say about the rectangle's area?  If the perimeter of any simple closed 2-dimensional shape is 20 feet, what is the most anyone can say about its area?
-%\end{prob}
-%
+
+\begin{prob}
+In the figure below  $O$ is the center of the circle, $\overline{XY}$ is a diameter, $a = PX$, $b=PY$, and $c=PZ$.  
+$$\includegraphics[scale=0.6]{../graphics/means}$$
+\begin{enumerate}
+\item Show that $c=\sqrt{ab}$.  
+\item Use the figure to explain the Arithmetic-Geometric Mean Inequality: $\frac{a+b}{2} \ge \sqrt{ab}$.  
+%\item Why is this called the Arithmetic-Geometric Mean Inequality?  
+\end{enumerate}
+\end{prob}
+
+\begin{prob}
+If the perimeter of a rectangle is 20 feet, what is the most one can say about the rectangle's area?  If the perimeter of any simple closed 2-dimensional shape is 20 feet, what is the most anyone can say about its area?
+\end{prob}
+
 %\begin{prob}
 %If the surface area of a rectangular prism is 20 square feet, what is the most one can say about the prism's volume?  If the surface area of any simple closed 3-dimensional shape is 20 square feet, what is the most one can say about its volume? 
 %\end{prob}
