End of Spring 2024

--- a/ParallelsInGeometry/1166-SupplementalProblems.tex
+++ b/ParallelsInGeometry/1166-SupplementalProblems.tex
@@ -1,9 +1,9 @@
 \newpage
 
-\section{Math 1166: Final Exam Review, Spring 2022 (draft)}
+\section{Math 1166: Final Exam Review, Spring 2024}
 
 Note:  The final exam is cumulative, so be sure to include the \textbf{previous midterm review documents} as part of your review.  
-Since the third midterm, we will have covered Sections 6.1 and 6.2 from your notes as well as Activities A.41 -- A.48, except A.44 and A.47.  (Some of these activities were modified for Desmos or GeoGebra.) Below is a summary of that content.  
+Since the third midterm, we will have covered Sections 6.1 and 6.2 from your notes as well as Activities A.35 -- A.40 and A.44 -- A.51 (except A.46).  (Some of these activities were modified for Desmos or GeoGebra.) Below is a summary of that content.  
 
 Some of the following problems (as well as a few others) will be part of an online supplementary review, available by Reading Day.  
 
@@ -307,22 +307,22 @@ Volume of a cylinder.
 %\end{enumerate}
 %\end{prob}
 
-\begin{prob}
-Below is a figure that illustrates part of Euclid's proof of the Pythagorean Theorem.  You may assume the following: 
-\begin{itemize}
-\item All  angles that appear to be right angles are indeed right.
-\item $FB=BA$ and $BD=BC$. 
-\item $\triangle ABD \cong \triangle FBC$.  
-\end{itemize}
-\[
-\includegraphics[scale=0.25]{../graphics/Euclid_Pythagorean_theorem3.PNG}
-\]
-\begin{enumerate}
-\item Why is the area of $\triangle KBD$ (not drawn) equal to the area of $\triangle ABD$?
-\item Why is the area of $\triangle FBC$ equal to the area of $\triangle FBA$ (not drawn)?
-\item Explain briefly why the area of rectangle $KBDL$ equal to the area of rectangle $FBAG$.
-\item Now explain how to complete the proof of the Pythagorean theorem.  \end{enumerate}
-\end{prob}
+%\begin{prob}
+%Below is a figure that illustrates part of Euclid's proof of the Pythagorean Theorem.  You may assume the following: 
+%\begin{itemize}
+%\item All  angles that appear to be right angles are indeed right.
+%\item $FB=BA$ and $BD=BC$. 
+%\item $\triangle ABD \cong \triangle FBC$.  
+%\end{itemize}
+%\[
+%\includegraphics[scale=0.25]{../graphics/Euclid_Pythagorean_theorem3.PNG}
+%\]
+%\begin{enumerate}
+%\item Why is the area of $\triangle KBD$ (not drawn) equal to the area of $\triangle ABD$?
+%\item Why is the area of $\triangle FBC$ equal to the area of $\triangle FBA$ (not drawn)?
+%\item Explain briefly why the area of rectangle $KBDL$ equal to the area of rectangle $FBAG$.
+%\item Now explain how to complete the proof of the Pythagorean theorem.  \end{enumerate}
+%\end{prob}
 
 
 %\begin{prob}
